# path

./: .gitignore  .gitmodules  CMakeLists.txt  data.cpp  data.h  flow_math.h  function.cpp  function.h  integrator.cpp  integrator.h  main.c  main.cpp  material.h  math_test.c  readme.md  renderer.cpp  renderer.h  rng.cpp  rng.h  sampling.cpp  sampling.h  scene.h  scene_data.h  scene_parser.cpp  scene_parser.h  scenes.h  shape.cpp  shape.h  util.cpp  util.h  vec.h
assets/cornell-box/: scene-v4.pbrt
backup/: integrator.cpp  integrator.h  main.cpp  renderer.cpp  renderer.h  rng.cpp  rng.h  sampling.cpp  sampling.h  scene.h  scene_data.cpp  scene_data.h  scene_parser.cpp  scene_parser.h  scenes.h  shape.cpp  shape.h  util.cpp  vec2.h  vec3.h
include/: pbrt.h
src/: math.h  pbrt.cpp
tests/: CMakeLists.txt  PBRTTest.cpp
